--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header {
   color: #fff;
   padding: 10px 20px;
   transition: 0.5s;
+  font-size: 1.5rem;
 }
 
 .menu li a:hover {
@@ -52,6 +53,7 @@ header {
 h1 {
   text-align: center;
   color: #fff;
+  font-size: 3rem;
   margin-top: 20px;
 }
 
